adding response handling over websockets

--- a/worker/views/index.ejs
+++ b/worker/views/index.ejs
@@ -7,13 +7,10 @@
             var Speech=function(t){function e(t){if(this.options={debugging:!1,continuous:!1,interimResults:!1,autoRestart:!1},"[object Object]"===Object.prototype.toString.call(t))for(var e in t)this.options[e]=t[e];this.active=!1,this.manualStopped=!1,this.history=[],this.lastIndex=-1,this.lastResult="",this.recognition=new webkitSpeechRecognition;var i=this.recognition,s=this;i.continuous=s.options.continuous,i.interimResults=s.options.interimResults,t.lang&&(i.lang=t.lang),i.onstart=function(){s.active=!0,this.manualStopped=!1,s.emit("start")},i.onresult=function(t){if(t.results&&t.results.length){var e=t.results[t.resultIndex],i=e[0].transcript.replace(/^\s*/,"");t.resultIndex!==s.lastIndex&&(s.lastIndex=t.resultIndex,s.lastResult=""),(i!==s.lastResult||e.isFinal)&&(i.length<s.lastResult.length||(s.lastResult=i,e.isFinal?(s.history.push(i),s.emit("finalResult",i)):s.emit("interimResult",i),s.options.debugging&&console.log(i+(e.isFinal?" (final)":""))))}},i.onerror=function(t){s.emit("error",t)},i.onend=function(){s.active=!1,s.history=[],s.lastIndex=-1,s.lastResult="",s.emit("end"),s.options.autoRestart&&!s.manualStopped&&s.start()}}var i=/\s+/,s=function(){};return s.prototype.on=function(t,e,s){var n,o,r;if(!e)return this;for(n=this.__events||(this.__events={}),t=t.split(i);o=t.shift();)r=n[o]||(n[o]=[]),r.push(e,s);return this},s.prototype.off=function(t,e,s){var n,o,r,l;if(!(n=this.__events))return this;if(!(t||e||s))return delete this.__events,this;for(t=t?t.split(i):Object.keys(n);o=t.shift();)if(r=n[o])if(e||s)for(l=r.length-2;l>=0;l-=2)e&&r[l]!==e||s&&r[l+1]!==s||r.splice(l,2);else delete n[o];return this},s.prototype.emit=function(t){var e,s,n,o,r,l,a,u=[];if(!(e=this.__events))return this;for(t=t.split(i),r=1,l=arguments.length;l>r;r++)u[r-1]=arguments[r];for(;s=t.shift();){if((n=e.all)&&(n=n.slice()),(o=e[s])&&(o=o.slice()),o)for(r=0,l=o.length;l>r;r+=2)o[r].apply(o[r+1]||this,u);if(n)for(a=[s].concat(u),r=0,l=n.length;l>r;r+=2)n[r].apply(n[r+1]||this,a)}return this},s.mixTo=function(t){t=t.prototype||t;var e=s.prototype;for(var i in e)e.hasOwnProperty(i)&&(t[i]=e[i])},e.prototype.start=function(){this.active||this.recognition.start()},e.prototype.stop=function(){this.active&&(this.manualStopped=!0,this.recognition.stop())},s.mixTo(e),e}();module&&module.exports&&(module.exports=Speech);
         </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
+        <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
         <script>
-          var socket = io.connect('http://localhost');
-          socket.on('news', function (data) {
-            console.log(data);
-            socket.emit('my other event', { my: 'data' });
-          });
+
+
         </script>
         <style>
             body {
@@ -39,6 +36,7 @@
     <body>
         <h1 id="text">Please allow access to mic.</h1>
         <script type="text/javascript">
+            var socket = io.connect('http://localhost:8081');
             var text = document.getElementById('text')
             var listening = false;
             var mouth = window.speechSynthesis;
@@ -62,8 +60,6 @@
                     text.innerHTML = msg;
                     if(listening) {
                         handleCommand(msg);
-                        var x = msg.replace("yes", '');
-                        speak("You told me " + x);
                     }
                     else {
                         getTrigger(msg);
@@ -72,6 +68,17 @@
                 })
                 .start();
                 
+            socket.on('response', function(data) {
+                console.log("GOT A RESPONSE EVENT", data)
+                if(data.type == 'weather') {
+                    var x = JSON.parse(data.response);
+                    speak('The current temperature in ' + x.city.name + ' is ' + x.list[0].main.temp + ' degrees.');
+                }
+                else {
+                    console.log('needs 2 speak');
+                    speak(data.response);
+                }
+            });
 
             function getTrigger(msg) {
                 if(msg.indexOf('Archer') > -1) {
@@ -82,8 +89,9 @@
             }
             
             function handleCommand(msg) {
+                var x = msg.replace("yes ", '');
                 listening = false;
-                // MAKE POST REQUEST TO ARCHER SERVER WITH COMMAND
+                socket.emit('command', { command: x })
             }
             
             function speak(msg) {
